2016-11-02-16:24  gepr  <gepr@tempusdictum.com>

	* ClassUtils, CollectionUtils, ObjectUtils, StringUtils: Reformatted and removed some TBD comments.
	* ClassUtils.java (getResourceFile()): Add a call to URLDecoder before looking for the file.  This should allow things like unicode characters in path names.

2016-09-01-14:32  gepr  <gepr@tempusdictum.com>

	* CollectionUtils.java (addIn()): If key is absent from receiver, insert giver's value (without copy).  If receiver value is double or float, use giver.doubleValue().  Everything else uses giver.longValue().

2016-08-18  gepr  <gepr@tempusdictum.com>

	* preamble.js: Move started variable declaration here to support those scripts that want to use it.

	* ScriptEval.java (ScriptEval): Refactor so that script files are only loaded once, then functions defined inside the scripts can be called later.  This avoids having too many open script files at any given time.

2016-04-15  gepr  <gepr@tempusdictum.com>

	* preamble.js: New script to house the check() function and the declaration of the jsException.

	* ScriptEval.java (constructor): Use passed in String as a location descriptor rather than a file name.  E.g. "classpath:isl/model/ei-gradient-function.js".  Ideally, if we retrieve these from the network, we can use "http://xyz.com/abc.js".  The Nashorn JS load() uses this syntax.
	(eval()): No longer single out time as a special variable.  Input it like the rest of the variables, with the scope.put() method.  Look for the boolean "started" variable in the script's scope.  If it's not there, throw an exception.

2016-03-30  gepr  <gepr@tempusdictum.com>

	* CollectionUtils.java: MyInt → MutableInt.

	* MutableInt.java: Change name from MyInt to MutableInt.
