@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/gepr/.netbeans/8.1/build.properties
+user.properties.file=/home/gepr/.netbeans/8.2/build.properties
